--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   logger: ^2.4.0
+  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
